<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright © 2017-2025 WireGuard LLC. All Rights Reserved.
  ~ SPDX-License-Identifier: Apache-2.0
  -->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.wireguard.android.model.ApplicationData" />

        <variable
            name="fragment"
            type="com.wireguard.android.fragment.AppListDialogFragment" />

        <variable
            name="appData"
            type="com.wireguard.android.databinding.ObservableKeyedArrayList&lt;String, ApplicationData&gt;" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            style="@style/Widget.Material3.TabLayout.OnSurface"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exclude_from_tunnel" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/include_in_tunnel" />
        </com.google.android.material.tabs.TabLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/search_applications">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/search_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="textNoSuggestions|textVisiblePassword"
                tools:text="wireguard" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="@{fragment::onToggleAllSelection}"
                android:text="@string/toggle_all" />

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="@{fragment::onClearSelection}"
                android:text="@string/clear_selection" />
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="200dp">

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:indeterminate="true"
                android:visibility="gone"
                tools:visibility="visible" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/app_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:items="@{appData}"
                app:layout="@{@layout/app_list_item}"
                tools:itemCount="10"
                tools:listitem="@layout/app_list_item" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/empty_state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/no_matching_applications"
                android:textAppearance="?attr/textAppearanceBodyMedium"
                android:visibility="gone"
                tools:visibility="visible" />
        </FrameLayout>
    </LinearLayout>
</layout>
